Updated copy / typeface

--- a/assets/scss/foundation.css
+++ b/assets/scss/foundation.css
@@ -4759,7 +4759,7 @@ dd {
   margin: 0; }
 
 h2 {
-  font-size: 34px; }
+  font-size: 28px; }
   @media only screen and (min-width: 768px) {
     h2 {
       font-size: 64px; } }
@@ -4776,10 +4776,12 @@ h2 {
     background: #205D82;
     color: #fff; }
     #slide.one h1, #slide.one h2 {
-      color: #fff; }
+      color: #fff;
+      font-size: 36px;
+      font-weight: 200; }
     #slide.one h1 {
       font-size: 3em;
-      font-family: "garamond-premier-pro-display", Georgia, serif; }
+      font-family: "adobe-caslon-pro", Georgia, serif; }
       @media only screen and (min-width: 768px) {
         #slide.one h1 {
           font-size: 5em; } }
@@ -4854,8 +4856,12 @@ abbr {
   text-align: center;
   padding: 2em 0 0 0;
   background: #205D82;
-  color: #fff;
-  font-size: .8em; }
+  color: #fff; }
   .footer a {
     color: #fff;
     margin: 1em; }
+  .footer ul {
+    font-size: 1.3em;
+    text-align: center; }
+  .footer li {
+    text-align: center; }
