--- a/assets/scss/foundation.css
+++ b/assets/scss/foundation.css
@@ -4770,7 +4770,7 @@ h2 {
   border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
   @media only screen and (min-width: 768px) {
     #slide {
-      padding: 6.5em 0 0 0; } }
+      padding: 5em 0 0 0; } }
   #slide.one {
     padding: 10.5em 0;
     text-align: center;
@@ -4791,8 +4791,9 @@ h2 {
           font-size: 5em; } }
     #slide.one h2 {
       margin: 0;
-      padding: 0 0 3em 0;
-      opacity: .8;
+      padding: 0 0 1em 0;
+      color: #fff;
+      color: rgba(255, 255, 255, 0.6);
       font-weight: 100;
       font-size: 20px; }
       @media only screen and (min-width: 768px) {
@@ -4800,20 +4801,20 @@ h2 {
           font-size: 32px; } }
     #slide.one img {
       width: 30px; }
-  #slide.two h2 {
-    padding-bottom: 1em; }
-  #slide.two img {
-    text-align: center;
-    margin: 0 auto 1em auto; }
+  #slide.two {
+    background: url(../images/hibiscus.png) 50% 10% no-repeat; }
+    #slide.two img {
+      text-align: center;
+      margin: 0 auto 1em auto; }
   #slide.three .banner {
     margin: 3em 0;
     background: #eee;
+    background: rgba(0, 0, 0, 0.025);
     display: block;
     width: 100;
     padding: 1.5em; }
     #slide.three .banner h2 {
-      font-size: 28px;
-      color: #112138; }
+      font-size: 28px; }
       @media only screen and (min-width: 768px) {
         #slide.three .banner h2 {
           font-size: 48px; } }
@@ -4825,20 +4826,21 @@ h2 {
     font-weight: 700; }
   #slide.four h2 {
     padding-bottom: .25em; }
-  #slide.five h2 {
-    padding-bottom: .25em; }
-  #slide.five .small-6 {
-    padding-bottom: 3em;
-    text-align: center; }
-  #slide.five img {
-    margin: 0 auto;
-    text-align: center; }
+  #slide.five {
+    padding: 2em 0 0 0; }
+    #slide.five h2 {
+      padding-bottom: .25em; }
+    #slide.five .small-6 {
+      padding-bottom: 3em;
+      text-align: center; }
+    #slide.five img {
+      margin: 0 auto;
+      text-align: center; }
 
 .top-position {
-  padding: 5em 0; }
+  padding: 5em 0 0 0; }
 
 .top {
-  border-top: 1px solid #eee;
   padding-top: 1em;
   margin-top: 1em; }
 
@@ -4860,7 +4862,9 @@ div.specs {
 abbr {
   text-decoration: none;
   border-bottom: none;
-  cursor: default; }
+  cursor: default;
+  font-size: inherit;
+  color: inherit; }
 
 .feature {
   margin-bottom: 6.5em; }
